--- a/style.css
+++ b/style.css
@@ -49,15 +49,13 @@ body {
 .header {
     display: flex;
     align-items: center;
-    justify-content: space-between;
+    justify-content: space-around;
     width: 100%;
-    padding: 2rem 10rem;
-
 }
 
 .title {
     display: flex;
-    flex-direction: row;
+    flex-direction: column;
     align-items: baseline;
     font-weight: bold;
     flex-wrap: wrap;
@@ -67,15 +65,10 @@ body {
     font-size: 2rem;
 }
 
-.title span {
-    font-size: 1.2rem;
-    margin-inline: 0.5rem;
-    color: var(--var_c1);
-}
-
 .title p {
     font-size: 1.2rem;
     white-space: nowrap;
+    padding-left: 2rem;
 }
 
 .logo {
@@ -91,7 +84,7 @@ body {
     height: 1rem;
     width: 1rem;
     border-radius: 2rem;
-    margin-right: 0.8rem;
+    margin-right: 1rem;
     background-color: var(--var_c1);
 }
 
@@ -129,8 +122,8 @@ body {
 }
 
 .container img {
-    width: 400px;
-    height: 400px;
+    width: 300px;
+    height: 300px;
     object-fit: cover;
     border-radius: 300px;
     margin: 5rem;
@@ -144,6 +137,7 @@ body {
     width: 500px;
     text-align: justify;
     margin: 2rem 0 3rem 0;
+    padding: 0 20px 0 20px;
 }
 
 .indent {
@@ -268,4 +262,20 @@ footer p {
 
 footer h2 {
     margin-bottom: 0.5rem;
+}
+
+@media screen and (max-width: 450px) {
+    .header {
+        padding: 0 1rem;
+        flex-direction: column;
+    }
+
+    .title {
+        justify-content: center;
+        align-items: center;
+    }
+
+    .title p {
+        padding-left: 0;
+    }
 }
